--- a/parking-management/src/index.css
+++ b/parking-management/src/index.css
@@ -59,8 +59,7 @@ code {
 .parking-slot {
   cursor: pointer;
   display: inline-block;
-  height: 30px;
-  width: 30px;
+  padding: 5px;
   border: 1px solid #f6f6f6;
   border-radius: 10px;
   background: #f4f4f4;
